--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ toml = "0.7.4"
 reqwest = { version = "*", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 json = "0.12.4"
+relative-path = "1.8.0"
 
 [[bin]]
 name="main"
