--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ description="Poder criar via Cli um Merge Request no Space? Sim agora tu podes"
 edition = "2021"
 
 [dependencies]
-inquire = "0.6.2"
+inquire = { version = "0.6.2", features = ['editor']}
 regex = "1.8.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.96"
