--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name="CLI"
-version="0.1.0"
-authors=["Natã Alves"]
+version="0.6.0"
+authors=["Natã Alves <nata.cruz@multiplier.com.br>"]
 description="Poder criar via Cli um Merge Request no Space? Sim agora tu podes"
 edition = "2021"
 
@@ -15,7 +15,8 @@ reqwest = { version = "*", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 json = "0.12.4"
 relative-path = "1.8.0"
+loading = "0.3.0"
 
 [[bin]]
-name="main"
+name="create_mr"
 path="src/main.rs"
