--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,12 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.96"
 toml = "0.7.4"
 reqwest = { version = "*", features = ["json"] }
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1", features = ["full", 'macros'] }
 json = "0.12.4"
 relative-path = "1.8.0"
 loading = "0.3.0"
+futures = "*"
+directories = "5.0.1"
 
 [[bin]]
 name="create_mr"
